--- a/laravel_vue/index.html
+++ b/laravel_vue/index.html
@@ -6,6 +6,6 @@
     <title>Percobaan Git</title>
 </head>
 <body>
-    <h1>Percobaan Git</h1>
+    <h1>Percobaan Git Ayub Azhari</h1>
 </body>
 </html>
