--- a/laravel_vue/index.html
+++ b/laravel_vue/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1>Percobaan Git Ayub Azhari</h1>
+    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloremque ut explicabo! Autem quis optio sapiente ipsam ducimus dolorum atque vel quae mollitia sequi maxime, aperiam nam, placeat, quidem nesciunt.</p>
 </body>
 </html>
