--- a/laravel_vue/index.html
+++ b/laravel_vue/index.html
@@ -6,7 +6,7 @@
     <title>Percobaan Git</title>
 </head>
 <body>
-    <h1>Percobaan Git Ayub Azhari</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Atque doloremque ut explicabo! Autem quis optio sapiente ipsam ducimus dolorum atque vel quae mollitia sequi maxime, aperiam nam, placeat, quidem nesciunt.</p>
+    <h1>Percobaan Git</h1>
+    <p>Saya Ayub Azhari, asal Karawang</p>
 </body>
 </html>
