--- a/laravel_vue/index.html
+++ b/laravel_vue/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Percobaan Git</h1>
-    <p>Saya Ayub Azhari, saya berasal dari Karawang</p>
+    <p>Saya Ayub Azhari, saya berasal dari Karawang, saya kuliah di Bekasi</p>
 </body>
 </html>
